# victorybot

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  error_handling.py  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: lint.yml
static/css/: custom.css
templates/: base.html
