[tool.poetry]
name = "victorybot"
version = "0.1.0"
description = "A Slack bot for cheering on the victorious"
authors = ["Ben Steinberg <bsteinberg@law.harvard.edu>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.7"
slack-bolt = "^1.6.1"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
